--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "base-be-express-ts",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/main.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.14.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "dotenv": "^16.5.0",
-    "express": "^5.1.0",
-    "http-errors": "^2.0.0",
-    "mongoose": "^8.13.2",
-    "zod": "^3.24.3"
-  }
+	"name": "base-be-express-ts",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+		"format": "prettier --write .",
+		"prepare": "husky"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"devDependencies": {
+		"@types/express": "^5.0.1",
+		"@types/node": "^22.14.1",
+		"husky": "^9.1.7",
+		"prettier": "^3.5.3",
+		"prettier-plugin-organize-imports": "^4.1.0",
+		"ts-node-dev": "^2.0.0",
+		"typescript": "^5.8.3"
+	},
+	"dependencies": {
+		"dotenv": "^16.5.0",
+		"express": "^5.1.0",
+		"http-errors": "^2.0.0",
+		"mongoose": "^8.13.2",
+		"zod": "^3.24.3"
+	}
 }
