--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"express": "^5.1.0",
 		"http-errors": "^2.0.0",
 		"mongoose": "^8.13.2",
+		"reflect-metadata": "^0.2.2",
 		"zod": "^3.24.3"
 	}
 }
